--- a/src/style/gallery.css
+++ b/src/style/gallery.css
@@ -57,10 +57,12 @@ main {
   border-radius: 0.5rem;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.08);
   opacity: 1;
+  visibility: visible;
 }
 
 .image-wrapper:not(:hover) .tooltip {
   opacity: 0;
+  visibility: hidden;
   /* display: none; */
 }
 
@@ -85,11 +87,30 @@ main {
 
 .image-wrapper .tooltip .title {
   grid-column: 1 / -1;
-  font-size: 1.2em;
+  font-size: 1.1em;
 
   text-align: center;
 }
 
 .sorting {
   align-self: flex-end;
+}
+
+.pagination {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+
+  gap: 2em;
+
+  padding: 1em;
+}
+
+.pagination button {
+  background-color: transparent;
+  color: var(--c-vibrant);
+}
+
+.pagination button.selected {
+  color: var(--c-lite);
 }
