--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,15 +1,39 @@
-:root,
-body,
-html {
+:root {
   --f-heading: sans-serif;
   --f-normal: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
 
+  --c-background: hsl(0, 0%, 97%);
+  --c-surface: hsl(0, 0%, 99%);
+  --c-on-background: hsl(0, 0%, 97%);
+  --c-on-surface: hsl(0, 0%, 10%);
+  --outline: rgba(128, 128, 128, 0.822);
+
+  --c-vibrant: rgba(48, 139, 48, 0.781);
+  --c-lite: rgb(101, 179, 101);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --c-background: hsl(0, 0%, 10%);
+    --c-surface: hsl(0, 0%, 12%);
+    --c-on-background: hsl(0, 0%, 97%);
+    --c-on-surface: hsl(0, 0%, 97%);
+    --outline: rgba(59, 59, 59, 0.822);
+
+    --c-vibrant: rgb(36, 95, 36);
+    --c-lite: rgb(79, 139, 79);
+  }
+}
+
+body,
+html {
   font-family: var(--f-normal);
 
   margin: 0;
 
-  background-color: hsl(0, 0%, 97%);
+  background-color: var(--c-background);
+  color: var(--c-on-background);
 
   position: absolute;
   top: 0;
@@ -33,8 +57,9 @@ html {
 
   padding: 1em;
 
-  background-color: rgb(255, 255, 255);
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
+  color: var(--c-on-surface);
+  background-color: var(--c-surface);
+  box-shadow: 0px 4px 8px hsla(0, 0%, 0%, 0.08);
 
   z-index: 10000;
 }
@@ -48,17 +73,22 @@ html {
 }
 
 nav a {
-  color: black;
+  color: var(--c-on-surface);
   text-decoration: none;
   text-align: center;
 }
 
 nav a:hover {
-  color: cornflowerblue;
+  color: var(--c-vibrant);
+}
+
+.menu .selected {
+  color: var(--c-vibrant);
 }
 
 main section {
-  background-color: white;
+  background-color: var(--c-surface);
+  color: var(--c-on-surface);
   padding: 2rem;
   margin: 2rem;
 
@@ -75,25 +105,41 @@ input {
   font-size: 1.1em;
   padding: 0.4em;
   border-radius: 0.5rem;
-  border: solid 1px rgba(128, 128, 128, 0.822);
+  border: solid 1px var(--outline);
   text-align: center;
+
+  color: var(--c-on-surface);
+  background-color: var(--c-background);
+}
+
+input:autofill {
+  background-color: var(--c-vibrant);
+}
+
+input:-webkit-autofill {
+  background-color: var(--c-vibrant);
 }
 
 button {
   padding: 0.7em;
 
   border-radius: 0.3rem;
-  border: solid 1px rgba(128, 128, 128, 0.822);
+  border: solid 1px var(--outline);
 
-  background: cornflowerblue;
+  background: var(--c-vibrant);
   color: white;
+
+  cursor: pointer;
 }
 
 select {
   padding: 0.4em;
 
   border-radius: 0.5rem;
-  border: solid 1px rgba(128, 128, 128, 0.822);
+  border: solid 1px var(--outline);
 
   margin: 0.5rem;
+
+  color: var(--c-lite);
+  background-color: var(--c-surface);
 }
