--- a/src/style/logreg.css
+++ b/src/style/logreg.css
@@ -6,9 +6,19 @@ body {
 main {
   display: flex;
   width: 100%;
-  height: 100%;
   justify-content: space-around;
   align-items: flex-start;
+}
+
+@media (max-width: 950px) {
+  main {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  main section {
+    width: auto;
+  }
 }
 
 main section {
