Add: comment component

--- a/src/style/logreg.css
+++ b/src/style/logreg.css
@@ -5,7 +5,8 @@ body {
 
 main {
   display: flex;
-  width: 100%;
+  flex-direction: row;
+  
   justify-content: space-around;
   align-items: flex-start;
 }
