--- a/src/style/admin-panel.css
+++ b/src/style/admin-panel.css
@@ -4,6 +4,8 @@
 
 main {
   margin-left: calc(var(--w-sidebar) + 15px);
+
+  padding-bottom: 100vh;
 }
 
 nav {
@@ -21,7 +23,7 @@ nav {
   border-radius: 5px;
 }
 
-nav > section {
+nav>section {
   display: flex;
   flex-direction: column;
 }
@@ -56,10 +58,38 @@ nav h3 {
   justify-content: flex-start;
 
   width: 100%;
+  max-height: 50vh;
+
+  overflow-y: auto;
+
+  padding-block: .5rem;
 }
 
-.table > div {
+.table>div {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+
+  padding: .5rem;
+  border-radius: 5px;
+
+  gap: 10px;
+}
+
+.table>div:hover {
+  background-color: var(--c-surface-variant);
+}
+
+.table>div>.text {
+  flex: 1;
+}
+
+.text .subtitle {
+  opacity: .5;
+  font-size: .8em;
+}
+
+#comments .text {
+  font-size: .8em;
+  letter-spacing: -0.3px;
 }
